<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="false"
        android:clickable="false"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/eDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/date"
            android:inputType="date"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin1"
            android:text="@string/book_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin1"
            android:layout_marginStart="0dp"
            android:text="@string/colon"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/eTxtBookName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin1"
            android:layout_weight="1"
            android:hint="@string/name"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin1"
            android:text="@string/book_value"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin1"
            android:layout_marginStart="0dp"
            android:text="@string/colon"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/eTxtValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin1"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/value"
            android:inputType="number"
            android:textAlignment="textEnd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="@dimen/all_margin1"
            android:layout_marginTop="@dimen/all_margin1"
            android:text="@string/yen"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/countLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/all_margin1"
            android:layout_marginEnd="@dimen/all_margin1"
            android:layout_marginTop="@dimen/all_margin1"
            android:text="@string/book_page"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/all_margin1"
            android:layout_marginTop="@dimen/all_margin1"
            android:text="@string/suu"/>

        <EditText
            android:id="@+id/eNumPage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/all_margin1"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/page"
            android:inputType="number"
            android:textAlignment="textEnd"/>

        <TextView
            android:id="@+id/txtCount2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/all_margin1"
            android:layout_marginTop="@dimen/all_margin1"
            android:text="@string/book_page"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_memo"
            />

        <EditText
            android:id="@+id/etxtmemo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/memo"
            android:inputType="text"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rdgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rdbtn_midoku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rdbtn_midoku"/>

        <RadioButton
            android:id="@+id/rdbtn_kidoku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rdbtn_kidoku"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnEntry"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_entry"/>
    <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="btntemp"
            android:id="@+id/btntemp" />
    -->
</LinearLayout>