<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_yesterday"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txt_graph_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/context_graph"
            android:layout_weight="1"/>

        <Button
            android:text="@string/btn_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_tomorrow"
            android:layout_weight="1"/>

        <Button
            android:text="@string/graph_refrection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_reflect"
            android:layout_weight="1"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/result_per_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                />

            <TextView
                android:text="@string/seekbar_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_seekbar_day"
                />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekbar_result_day"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/result_cumulative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"/>

            <TextView
                android:text="@string/seekbar_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_seekbar_cumulative"/>

            <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="3"
                android:id="@+id/seekbar_result_cumulative"/>

        </TableRow>
    </TableLayout>

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/combined_chart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        />

</LinearLayout>