<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/newListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            >

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sort"
                    android:textColor="?android:attr/textColorSecondary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textColor="?android:attr/textColorSecondary"
                    />

                <TextView
                    android:id="@+id/txt_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filt"
                    android:textColor="?android:attr/textColorSecondary"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:gravity="right|center|end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_sort"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_sort"/>

                <Button
                    android:id="@+id/btn_filter"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filt"/>
            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sum"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/string_default"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"/>

                <TextView
                    android:id="@+id/txt_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/zero"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/string_default"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yen"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/string_default"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_loss"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/string_default"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colon"/>

                <TextView
                    android:id="@+id/txt_getloss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/zero"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/string_default"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yen"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="@dimen/string_default"/>

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_book"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/string_default"/>

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rate"/>
    </LinearLayout>

</LinearLayout>