<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/txtsetvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/seekbar_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:progress="0"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_up"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignEnd="@+id/btn_down"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:layout_marginEnd="47dp"
            android:layout_marginStart="0dp"
            android:text="@string/upper_triangle"/>

        <Button
            android:id="@+id/btn_down"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="75dp"
            android:text="@string/bottom_triangle"/>
    </RelativeLayout>

</LinearLayout>